Updates MongoDB and connects project

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://lskate1:Justdoit1!@cluster0-shyrn.gcp.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://leah836:nQxk4CiVwirxkVYu@cluster0.pjaldpn.mongodb.net/exercise-tracker?retryWrites=true&w=majority
